# wgpu-render-playground

./: .gitignore  Cargo.toml  build.rs  readme.md
assets/: mill.mtl
src/: bloom.rs  bloom_pre.wgsl  blur.wgsl  blur_h.wgsl  blur_w.wgsl  camera.rs  equirectangular.wgsl  hdr.rs  hdr.wgsl  lib.rs  light.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  shadow.rs  shadow.wgsl  sky.wgsl  texture.rs  vertexs.rs
