[package]
name = "my_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
anyhow = "1.0"
instant = "0.1"
bytemuck = { version = "1.12", features = [ "derive" ] }
tobj = { version = "3.2.1", features = [
    "async",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]